# dubit-server

./: .env.example  Cargo.toml
src/: main.rs
src/handlers/: meeting_handler.rs  mod.rs  user_handler.rs
src/modals/: api_modal.rs  meeting_model.rs  mod.rs  user_modal.rs
src/repos/: meeting_repo.rs  mod.rs  user_repo.rs
src/utils/: auth.rs  conn.rs  fairing.rs  firebase.rs  gzip.rs  macro_rules.rs  mod.rs
